upgraded to lego 1.3.3 fixed broken nav highlight current nav on page load

--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -40,7 +40,8 @@ section[name="center"] {
 }
 
 .menu nav a:hover,
-.menu nav a:focus {
+.menu nav a:focus,
+.menu nav a[active] {
   background-color: #555;
 }
 
